--- a/css/general1.css
+++ b/css/general1.css
@@ -25,70 +25,50 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-body {
-	background: lightblue;
-	
+body {background:lightskyblue;
 }
 
 
-textarea { 
-	margin-top:100px;
-	margin-left:15%;
-	color: green;
-	background: linear-gradient(red, blue);
-	min-width: 200px;
-	min-height: 100px;
-	transition: all 0.3s linear;
+/* INPUT LABEL */
+
+label{
+	cursor: pointer;
+	font-size: 20px;
+}
+
+input[type="checkbox"]{
+	display: none;
+}
+
+input[type="checkbox"]+label{
+	display: inline-block;
+	padding: 10px 10px 10px 30px;
+	color: white;
+	position: relative;
+	border: 2px solid white;
+	box-shadow: 0 0 10px white;
+	background: radial-gradient(#e66465, #9198e5)no-repeat;
+	margin-top: 100px;
+	margin-left: 100px;
 
 }
 
-::placeholder {
-	color:yellow;
-	font-size: 15px;
-	text-shadow: 3px 3px 3px black;
-
-}
-
-
-textarea:hover {
-	transform:scale(1.1);
-	box-shadow: 3px 3px 7px black;
-	
-}
-
-select {
-
-	background:
-	  linear-gradient(45deg, transparent 50%, red 50%),
-	  linear-gradient(135deg, red 50%, transparent 50%),
-	  linear-gradient(to right, skyblue, skyblue);
-	background-position:
-		calc(100% - 16px) calc(1em + 0px),
-		calc(100% - 6px) calc(1em + 0px),
-		100% 0;
-	background-size:
-	  10px 10px,
-	  10px 10px,
-	  2.5em 2.5em;
-	background-repeat: no-repeat;
-	padding: 10px 35px 7px 18px;
-	appearance: none;
-	margin-left: 15%;
-	outline: none;
-}
-
-input {
-	display: block;
-	margin-left: 15%;
-	margin-top: 1%;
+input[type="checkbox"]+label:before{
+	content: "";
+	width: 15px;
+	height: 15px;
+	border: 2px solid white;
+	position: absolute;
+	left:7px;
+	top:11px;
 	transition: all 1s ease;
 }
 
-input:focus {
-	background: aqua;
-	outline: none;
-	border:1px solid rgb(255, 0, 0);
-	box-shadow: 3px 3px 5px white;
-	transform:rotate(1turn);
-
+input[type="checkbox"]:checked+label:before{
+	background:lime;
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+	transform: rotate(5turn);
 }
+
